<resources>
    <string name="app_name">Расписание БГУИР</string>
    <string name="schedule_doesnt_exist">Расписание отсутствует</string>
    <string name="search">Поиск</string>
    <string name="favorites_available">Добавьте избранное</string>
    <string name="creator_fio">Шухман Максим Юрьевич</string>
    <string name="developer">Разработчик</string>
    <string name="vesion">Версия</string>
    <string name="item_about_app">О приложении</string>
    <string name="creator_inf">ФИТиУ АСОИ, 220604, 1 курс</string>
    <string name="endOfSchedule">Занятия закончились!</string>
    <string name="update">Обновление</string>
    <string name="update_schedule">Доступно обновление расписания. Обновить?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="up_button">Вверх</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="groups">Группы</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="yanuary">Января</string>
    <string name="february">Февраля</string>
    <string name="march">Марта</string>
    <string name="april">Апреля</string>
    <string name="may">Мая</string>
    <string name="june">Июня</string>
    <string name="july">Июля</string>
    <string name="august">Августа</string>
    <string name="september">Сентября</string>
    <string name="october">Октября</string>
    <string name="november">Ноября</string>
    <string name="december">Декабря</string>
    <string name="widget_choose_schedule">Выберите расписание</string>
    <string name="search_button">Поиск</string>
    <string name="go_back">Перейти назад</string>
    <string name="subgroup1">Подгруппа 1</string>
    <string name="subgroup2">Подгруппа 2</string>
    <string name="subgroupAll">Все подгруппы</string>
</resources>